Fix bug 24 by overriding the context menu's visibility.

--- a/chrome/skin/browser.css
+++ b/chrome/skin/browser.css
@@ -29,3 +29,7 @@
   padding: 0;
   margin: 0;
 }
+
+tabbrowser menupopup[anonid="tabContextMenu"] {
+  visibility: visible !important;
+}
